--- a/style.css
+++ b/style.css
@@ -184,13 +184,6 @@ body {
 }
 
 
-
-
-
-
-
-
-
 #person {
   height: 100vh;
   width: 100%;
@@ -613,7 +606,7 @@ body {
   font-weight: 700;
   letter-spacing: .15rem;
   color: var(--color-black);
-  background: var(--color-white);
+  background: var(--color-pink);
   text-align: center;
   text-decoration: none;
 
@@ -624,7 +617,7 @@ body {
 
 .button-cta a:hover {
   transition: all .3s ease;
-  filter: brightness(.8);
+  filter: brightness(.4);
 }
 
 /* sm */
