--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     --color-white: #fff;
     --color-pink: #d12f7a;
     --color-black: #000;
-    --color-pink: #ffc0cb;
+    --color-pink: #bf8585;
     --color-violet: #78288c;
 }
 
